# sample-aws-lambda-s3-trigger

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml
infra/dev/: .terraform.lock.hcl  main.tf
src/s3-trigger/: index.py
